--- a/DOM_SelfStudy/quiz9.html
+++ b/DOM_SelfStudy/quiz9.html
@@ -5,6 +5,11 @@
         <style></style>
     </head>
     <body>
+        <header>
+            <div class="container">
+                <h1></h1>
+            </div>
+        </header>
         <script src="./quiz9.js"></script>
     </body>
 </html>
