--- a/fetch/server/public/index.html
+++ b/fetch/server/public/index.html
@@ -5,9 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <div>Hello world</div>
+        <div>
+            <button>Click me to get a cat!</button>
+        </div>
         <script src="/main.js"></script>
     </body>
 </html>
