--- a/SelfStudy/Fetch_SelfStudy/server_SelfStudy/public/index.html
+++ b/SelfStudy/Fetch_SelfStudy/server_SelfStudy/public/index.html
@@ -9,6 +9,6 @@
     <body>
         <div>Hello from HTML static file on public folder!</div>
         <!--<script src="./main.js"></script>-->
-        <script src="asyncAwaits_promiseThen.js"></script>
+        <script src="assignment3_problem3.js"></script>
     </body>
 </html>
